--- a/src/assets/_project/scss/bootstrap/mixins/_grid.scss
+++ b/src/assets/_project/scss/bootstrap/mixins/_grid.scss
@@ -8,7 +8,7 @@
   margin-left: auto;
   padding-left:  floor(($qg-grid-gutter-width-small / 2));
   padding-right: ceil(($qg-grid-gutter-width-small / 2));
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-lg-min) {
     padding-left:  floor(($gutter / 2));
     padding-right: ceil(($gutter / 2));
   }
@@ -19,9 +19,9 @@
 @mixin make-row($gutter: $grid-gutter-width) {
   margin-left:  ceil(($qg-grid-gutter-width-small / -2));
   margin-right: floor(($qg-grid-gutter-width-small / -2));
-  @media (min-width: $screen-md-min) {
-    padding-left:  ceil(($gutter / -2));
-    padding-right: floor(($gutter / -2));
+  @media (min-width: $screen-lg-min) {
+    margin-left:  ceil(($gutter / -2));
+    margin-right: floor(($gutter / -2));
   }
   @include clearfix;
 }
@@ -34,7 +34,7 @@
   min-height: 1px;
   padding-left:  ($qg-grid-gutter-width-small / 2);
   padding-right: ($qg-grid-gutter-width-small / 2);
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-lg-min) {
     padding-left:  ($gutter / 2);
     padding-right: ($gutter / 2);
   }
@@ -46,7 +46,7 @@
   min-height: 1px;
   padding-left:  ($qg-grid-gutter-width-small / 2);
   padding-right: ($qg-grid-gutter-width-small / 2);
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-lg-min) {
     padding-left:  ($gutter / 2);
     padding-right: ($gutter / 2);
   }
@@ -63,7 +63,7 @@
   min-height: 1px;
   padding-left:  ($qg-grid-gutter-width-small / 2);
   padding-right: ($qg-grid-gutter-width-small / 2);
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-lg-min) {
     padding-left:  ($gutter / 2);
     padding-right: ($gutter / 2);
   }
@@ -80,7 +80,7 @@
   min-height: 1px;
   padding-left:  ($qg-grid-gutter-width-small / 2);
   padding-right: ($qg-grid-gutter-width-small / 2);
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-lg-min) {
     padding-left:  ($gutter / 2);
     padding-right: ($gutter / 2);
   }
